--- a/vignettes/adiele.Rmd
+++ b/vignettes/adiele.Rmd
@@ -13,151 +13,130 @@ Adiele, J. G., A. G. T. Schut, K. S. Ezui, P. Pypers and K. E. Giller (2021). A 
 
 ```{r run_model}
 library(LINTCAS)
-mod <- list()
-lcp <- system.file(package="LINTCAS")
-#country <- "nig"
+mod  <-  list()
+lcp  <-  system.file(package="LINTCAS")
 # weather data
-wth <- derive_wth_vars(readRDS(file.path(lcp, "ex/weather.rds")))
+wth  <-  readRDS(file.path(lcp, "ex/weather.rds"))
 
-#get_wth1 <- function(...) {
-#  w <- get_weather(...)
-#  derive_wth_vars(w)
-#}
-#wd <- get_wth1(directory=system.file("weather", package="LINTCAS"), country="nig", station='1', year=year, endtime = 506)
 
-get_wth <- function(name, year) {
-  w <- wth[(wth$NAME==name) & (wth$YEAR %in% (year + 0:1)), ]
-  # should use dates, not DOYS
-  w$DOYS <- 1:nrow(w)
-  w
+get_wth  <-  function(name, year) {
+  wth[(wth$NAME==name) & (wth$YEAR >= year), ]
 }
 
-SiteInfo <- read.csv(file.path(lcp, "ex/Field_characteristics_field_management.csv"))
+SiteInfo  <-  read.csv(file.path(lcp, "ex/Field_characteristics_field_management.csv"))
+Adiele_iri  <-  LC_parameters("Adiele", irri = TRUE)
+Adiele_rf  <-  LC_parameters("Adiele", irri = FALSE)
+
 for(year in c(2016, 2017)) {
   yr <- substr(year, 3, 4)
-#	wdata <- get_weather_old(system.file("weather", package="LINTCAS"), country="nig", station='1', year=year, endtime = 506)
 	wdata <- get_wth("Benin", year)
 	#Use default parameters as defined by Ezui et al. and re-calibrated by Adiele et al. EJA 2021
-	pars_iri  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Edo" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = TRUE))
-		Pot_Edo <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
-
+	pars_iri <- LC_management(SiteInfo = subset(SiteInfo, Location == "Edo" & Year_of_planting == year), MODEL_PARAM = Adiele_iri)
+		
+	Pot_Edo <- LC_run(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
 	mod[[paste0("Pot_Edo", yr)]] <- data.frame(Location="Edo", Year=year, Pot_Edo)
 	  
-	pars_rf  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Edo" & Year_of_planting == year),MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = FALSE))
-
-	Wlim_Edo <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
+	pars_rf <- LC_management(SiteInfo = subset(SiteInfo, Location == "Edo" & Year_of_planting == year),MODEL_PARAM = Adiele_rf)
+	Wlim_Edo <- LC_run(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
 
 	mod[[paste0("Wlim_Edo", yr)]] <- data.frame(Location="Edo", Year=year, Wlim_Edo)
 	
 	#-CRS, cross river---------------------------------------------------------------------------------------#
 	if(year == 2016) {
-#		wdata <- get_weather(system.file("weather", package="LINTCAS"), country=country, station='3', year=year, endtime = 500)
 		wdata <- get_wth("Ogoja CRS", year)
-		pars_iri  <-  LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Cross River1" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = TRUE))
-		pars_rf  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Cross River1" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = FALSE))
+		pars_iri <- LC_management(SiteInfo = subset(SiteInfo, Location == "Cross River1" & Year_of_planting == year), MODEL_PARAM = Adiele_iri)
+		pars_rf <- LC_management(SiteInfo = subset(SiteInfo, Location == "Cross River1" & Year_of_planting == year), MODEL_PARAM = Adiele_rf)
 	} else if(year == 2017) {
-#		wdata <- get_weather(system.file("weather", package="LINTCAS"), country=country, station='4', year=year, endtime = 500)
 		wdata <- get_wth("Ikom CRS", year)
-		pars_iri  <-  LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Cross River2" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = TRUE))
-		pars_rf  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Cross River2" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = FALSE))
+		pars_iri <- LC_management(SiteInfo = subset(SiteInfo, Location == "Cross River2" & Year_of_planting == year), MODEL_PARAM = Adiele_iri)
+		pars_rf <- LC_management(SiteInfo = subset(SiteInfo, Location == "Cross River2" & Year_of_planting == year), MODEL_PARAM = Adiele_rf)
 	}
 	  
-	Pot_CRS <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
-
+	Pot_CRS <- LC_run(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
 	mod[[paste0("Pot_CRS", yr)]] <- data.frame(Location="CRS", Year=year, Pot_CRS)
 	  
-	  
-	Wlim_CRS <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
-
+	Wlim_CRS <- LC_run(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
 	mod[[paste0("Wlim_CRS", yr)]] <- data.frame(Location="CRS", Year=year, Wlim_CRS)
 	  
 	#-Benue-------------------------------------------------------------------------------------------------#
-	pars_iri  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Benue2" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = TRUE))
-	pars_rf  <- LINTUL2_CASSAVA_FIELD_MANAGEMENT(SiteInfo = subset(SiteInfo, Location == "Benue2" & Year_of_planting == year), MODEL_PARAM = LINTUL2_CASSAVA_PARAMETERS_ADIELE(irri = FALSE))
+	pars_iri <- LC_management(SiteInfo = subset(SiteInfo, Location == "Benue2" & Year_of_planting == year), MODEL_PARAM = Adiele_iri)
+	pars_rf <- LC_management(SiteInfo = subset(SiteInfo, Location == "Benue2" & Year_of_planting == year), MODEL_PARAM = Adiele_rf)
 
-#		wdata <- get_weather(system.file("weather", package="LINTCAS"), country=country, station='2', year=year, endtime = pars_iri[["DOYHAR"]])
-		wdata <- get_wth("Benue", year)
-	  
-	Pot_Ben <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
-
+	wdata <- get_wth("Benue", year)
+	
+	Pot_Ben <- LC_run(wdata = wdata,  pars = pars_iri, year = year, starttime = pars_iri[["DOYPL"]]-100, endtime = pars_iri[["DOYHAR"]])
 	mod[[paste0("Pot_Ben", yr)]] <- data.frame(Location="Benue", Year=year, Pot_Ben)  
 	  
 	  
-	Wlim_Ben <- LINTUL2_CASSAVA_RUN(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
+	Wlim_Ben <- LC_run(wdata = wdata,  pars = pars_rf, year = year, starttime = pars_rf[["DOYPL"]]-100, endtime = pars_rf[["DOYHAR"]])
 	mod[[paste0("Wlim_Ben", yr)]] <- data.frame(Location="Benue", Year=year, Wlim_Ben)
 }
 
-#saveRDS(mod, "mod.rds")
+##saveRDS(mod, "mod2.rds")
 #m <- readRDS("mod.rds")
+#all.equal(m, mod)
 ```
 
 
-## Figure 1
+The below reproduces the figures as shown in the EJA paper
 
-Scripts that produce the figures 1 and 1A as shown in the EJA paper
+### Figure 1A
 
-```{r figure1}
+```{r anova}
 #Data measured with an AccuPar below and above canopy
-
 DATA_ACCUPAR <- read.csv(file.path(lcp, "ex/AccuPAR_and_caculated_LAI_k.csv"))
+Modk <- lm(ln_FLI ~ -1 + LAI, data=DATA_ACCUPAR)
+print(summary(Modk))
+print(anova(Modk))
+```
 
-#Figure 1A.
-Adiele_etal_EJA_Fig_1A <- function(DATA){
-  Modk <- lm(DATA$ln_FLI ~ -1 + DATA$LAI)
+
+```{r figure1A}
+
+Fig_1A <- function(DATA, model){
+  par(oma=c(2,2,2,2),mar=c(5,5,0,0))
+  #Modk <- lm(ln_FLI ~ -1 + LAI, data=DATA)
   
-  uLY<-unique(DATA[,"Loc_yr"])
-  ii<-DATA[,"Loc_yr"]=="Benue_2017"
-  plot(x=DATA[ii,"LAI"],y=DATA[ii,"ln_FLI"],
-       cex.lab=1.5, cex = 1.0,
-       xlab = 'Leaf area index (m²/m²)',
-       ylab = '-ln (1-fLI)',
-       xlim = c(0,7), ylim = c(0,5),
-       type="p",
-       pch=15,col="black")
-  ii<-DATA[,"Loc_yr"]=="Benue_2016"
-  points(x=DATA[ii,"LAI"],y=DATA[ii,"ln_FLI"], pch=0,col="black",cex=1.0)
-  ii<-DATA[,"Loc_yr"]=="Edo_2016"
-  points(x=DATA[ii,"LAI"],y=DATA[ii,"ln_FLI"], pch=1,col="black",cex=1.0)
-  ii<-DATA[,"Loc_yr"]=="Edo_2017"
-  points(x=DATA[ii,"LAI"],y=DATA[ii,"ln_FLI"], pch=16,col="black",cex=1.0)
+  uLY <- unique(DATA[,"Loc_yr"])
+  i <- DATA$Loc_yr == "Benue_2017"
+  plot(DATA[i,"LAI"], DATA[i,"ln_FLI"],  cex.lab=1.5,
+       xlab = 'Leaf area index (m²/m²)', ylab = '-ln (1-fLI)',
+       xlim = c(0,7), ylim = c(0,5), pch=15)
+  i <- DATA$Loc_yr=="Benue_2016"
+  points(x=DATA[i,"LAI"], y=DATA[i,"ln_FLI"], pch=0)
+  i <- DATA[,"Loc_yr"]=="Edo_2016"
+  points(x=DATA[i,"LAI"],y=DATA[i,"ln_FLI"], pch=1)
+  i <- DATA[,"Loc_yr"]=="Edo_2017"
+  points(x=DATA[i,"LAI"],y=DATA[i,"ln_FLI"], pch=16)
 
   legend("bottomright", c("Benue, 2016" ,"Benue, 2017","Edo, 2016", "Edo, 2017"),
-         cex=1.0,
-         pch = c(0, 15, 1, 16), bty="n") 
-  
-  print(summary(Modk))
-  print(anova(Modk))
-  abline(Modk)
+          pch = c(0, 15, 1, 16), bty="n") 
+  abline(model)
   legend('topleft', c('R² = 0.99', 'y = 0.67x'), bty = 'n')
 }
 
-par(oma=c(2,2,2,2),mar=c(5,5,0,0))
-Adiele_etal_EJA_Fig_1A(DATA = DATA_ACCUPAR)
-
-
-
-Adiele_etal_EJA_Fig_1 <- function(DATA){
-
-  Modk <- lm(DATA$ln_FLI ~ -1 + DATA$LAI)
-  
-  plot(x=DATA[,"LAI"],y=DATA[,"ln_FLI"],
-       cex.lab=1.5, cex = 1.0,
-       xlab = 'Leaf area index (m²/m²)',
-       ylab = '-ln (1-fLI)',
-       xlim = c(0,7), ylim = c(0,5),
-       type="p",
-       pch=1,col="black")
-
-  print(summary(Modk))
-  print(anova(Modk))
-  abline(Modk)
-  legend('topleft', c('R² = 0.99', 'y = 0.67x'), bty = 'n')
-}
-  par(oma=c(2,2,2,2),mar=c(5,5,0,0))
-  Adiele_etal_EJA_Fig_1(DATA = DATA_ACCUPAR)
+Fig_1A(DATA = DATA_ACCUPAR, Modk)
 ```
 
-## Figure 2
+### Figure 1
+
+```{r figure1}
+Fig_1 <- function(DATA, model){
+
+  par(oma=c(2,2,2,2),mar=c(5,5,0,0))
+
+  plot(DATA[,"LAI"], DATA[,"ln_FLI"], cex.lab=1.5,  
+       xlab = 'Leaf area index (m²/m²)', ylab = '-ln (1-fLI)', 
+       xlim = c(0,7), ylim = c(0,5))
+
+  abline(model)
+  legend('topleft', c('R² = 0.99', 'y = 0.67x'), bty = 'n')
+}
+
+Fig_1(DATA = DATA_ACCUPAR, Modk)
+```
+
+### Figure 2
 
 
 ```{r fig2}
@@ -166,170 +145,135 @@ DATA <- read.csv(file.path(lcp, "ex/fPAR_Benue_Edo.csv"))
 
 #################################################################
 
-DAP_vs_IPAR<-function(Series1=TRT1,Series2=NULL,Series3=NULL,
-                     LOCYR=LOCYR,
-                     LEG=TRUE,LEGTEXT=c('NfPfKf', 'NfPfKf', 'NfPfKf', "Observed")){
+DAP_vs_IPAR <- function(Series1=TRT1,Series2=NULL,Series3=NULL, LOCYR, LEG=TRUE,
+                      LEGTEXT=c('NfPfKf', 'NfPfKf', 'NfPfKf', "Observed")){
+  red <- rgb(1, 0, 0, alpha = 0.8)
+  blue <- rgb(0, 0, 1, alpha = 0.8)
   
-  # leaves
-  
-  ColS1 <- rgb(red = 0, green = 0, blue = 0, alpha = 1) #black line
-  ColS2 <- rgb(red = 1, green = 0, blue = 0, alpha = 0.8)#red line
-  ColS3 <- rgb(red = 0, green = 0, blue = 1, alpha = 0.8)#blue line
-  
-  plot( x    = Series1$DAP, 
-        y    = Series1$fPAR, type="l", 
-        col  = ColS1, 
-        xlab = "Days after planting", 
-        ylab = "IPAR, f",
-        ylim = c(0,1), 
-        xlim=c(0,450),
-        lwd  = 1.5,
-        lty  = 1,
-        cex.lab  = 1.25, #1.0
-        cex.axis= 1.1, #0.85
-        mgp=c(2,0.5,0))
+  plot(x = Series1$DAP, y = Series1$fPAR, type="l", 
+        xlab = "Days after planting", ylab = "IPAR, f",
+        ylim = c(0,1), xlim=c(0,450), lwd  = 1.5, lty  = 1,
+        cex.lab  = 1.25, cex.axis= 1.1, mgp=c(2,0.5,0))
   text(x=100, y=0.05,labels=LOCYR,cex=1.5)
   arrows(Series1$DAP, Series1$fPAR-Series1$fPAR_sd, 
          Series1$DAP, Series1$fPAR+Series1$fPAR_sd, 
-           length=0.05, angle=90, code=3,col = ColS1)
-    points(x   = Series1$DAP,
-           y   = Series1$fPAR,
-           col = ColS1,
-           pch = 2)
-    colLEG <- ColS1
+         length=0.05, angle=90, code=3)
+    points(x = Series1$DAP, y = Series1$fPAR, pch = 2)
+    colLEG <- "black"
     colLWD <- 1.5
     colLTY <- 1
     colPCH <- 2
 
   if(length(Series2)>1){
-    lines(x    = Series2$DAP, 
-          y    = Series2$fPAR, 
-          col  = ColS2, 
-          lwd  = 1.5,
-          lty  = 2)
+    lines(x = Series2$DAP, y = Series2$fPAR, col = red, lwd = 1.5, lty = 2)
     arrows(Series2$DAP+3, Series2$fPAR-Series2$fPAR_sd, 
            Series2$DAP+3, Series2$fPAR+Series2$fPAR_sd, 
-           length=0.05, angle=90, code=3,col = ColS2)
-    points(x   = Series1$DAP,
-           y   = Series1$fPAR,
-           col = ColS1,
-           pch = 5)
-    colLEG <- c(colLEG,ColS2)
+           length=0.05, angle=90, code=3, col = red)
+    points(x = Series1$DAP, y = Series1$fPAR, pch = 5)
+    colLEG <- c(colLEG, red)
     colLWD <- c(colLWD, 1.5)
     colLTY <- c(colLTY, 2)
     colPCH <- c(colPCH, 5)
   }
   if(length(Series3)>1){
-      lines(x    = Series3$DAP, 
-            y    = Series3$fPAR, 
-            col  = ColS3, 
-            lwd  = 1.5,
-            lty  = 4)
+      lines(x=Series3$DAP, y=Series3$fPAR, col=blue, lwd=1.5, lty=4)
       arrows(Series3$DAP-3, Series3$fPAR-Series3$fPAR_sd, 
              Series3$DAP-3, Series3$fPAR+Series3$fPAR_sd, 
-             length=0.05, angle=90, code=3,col = ColS3)
-      points(x   = Series3$DAP,
-             y   = Series3$fPAR,
-             col = ColS3,
-             pch = 19)
-      colLEG <- c(colLEG,ColS3)
+             length=0.05, angle=90, code=3,col = blue)
+      points(x = Series3$DAP, y = Series3$fPAR, col = blue, pch = 19)
+      colLEG <- c(colLEG, blue)
       colLWD <- c(colLWD, 1.5)
       colLTY <- c(colLTY, 4)
       colPCH <- c(colPCH, 19)
     }    
   if(LEG){
-    legend("bottomright", legend=LEGTEXT, col = colLEG, lwd = colLWD, lty = colLTY, pch = colPCH, bty = "n")
+    legend("bottomright", legend=LEGTEXT, col = colLEG, lwd = colLWD, 
+            lty = colLTY, pch = colPCH, bty = "n")
   }
 }
 
 Figure2 <- function(DATA){
-  par(mfrow=c(2,2),oma=c(3,3,1,1),mar=c(1.5,1.5,0,0))
-  ii<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfK1")
-  ij<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfKf")
-  ik<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfKfMn")
-  DAP_vs_IPAR(Series1=DATA[ii,],Series2=DATA[ij,],Series3=DATA[ik,],
-              LOCYR="Edo, 2016",
+  par(mfrow=c(2,2), oma=c(3,3,1,1), mar=c(1.5,1.5,0,0))
+  i <- which(DATA$Location=="Edo" & DATA$Year=="2016" & DATA$Treatment=="NfPfK1")
+  j <- which(DATA$Location=="Edo" & DATA$Year=="2016" & DATA$Treatment=="NfPfKf")
+  k <- which(DATA$Location=="Edo" & DATA$Year=="2016" & DATA$Treatment=="NfPfKfMn")
+  DAP_vs_IPAR(Series1=DATA[i,],Series2=DATA[j,],Series3=DATA[k,], LOCYR="Edo, 2016",
               LEG=TRUE,LEGTEXT=c('NfPfK240', 'NfPfKf', 'NfPfKfMN'))
-  ii<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfK1")
-  ij<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfKf")
-  ik<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2016" & DATA[,"Treatment"]=="NfPfKfMn")
-  DAP_vs_IPAR(Series1=DATA[ii,],Series2=DATA[ij,],Series3=DATA[ik,],
-              LOCYR="Benue, 2016",
+			  
+  i <- which(DATA$Location=="Benue" & DATA$Year=="2016" & DATA$Treatment=="NfPfK1")
+  j <- which(DATA$Location=="Benue" & DATA$Year=="2016" & DATA$Treatment=="NfPfKf")
+  k <- which(DATA$Location=="Benue" & DATA$Year=="2016" & DATA$Treatment=="NfPfKfMn")
+  DAP_vs_IPAR(Series1=DATA[i,],Series2=DATA[j,],Series3=DATA[k,], LOCYR="Benue, 2016",
               LEG=FALSE,LEGTEXT=c('NfPfK240', 'NfPfKf', 'NfPfKfMN'))
-  ii<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfK1")
-  ij<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfKf")
-  ik<-which(DATA[,"Location"]=="Edo" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfKfMn")
-  DAP_vs_IPAR(Series1=DATA[ii,],Series2=DATA[ij,],Series3=DATA[ik,],
-              LOCYR="Edo, 2017",
+			  
+  i <- which(DATA$Location=="Edo" & DATA$Year=="2017" & DATA$Treatment=="NfPfK1")
+  j <- which(DATA$Location=="Edo" & DATA$Year=="2017" & DATA$Treatment=="NfPfKf")
+  k <- which(DATA$Location=="Edo" & DATA$Year=="2017" & DATA$Treatment=="NfPfKfMn")
+  DAP_vs_IPAR(Series1=DATA[i,],Series2=DATA[j,],Series3=DATA[k,], LOCYR="Edo, 2017",
               LEG=FALSE,LEGTEXT=c('NfPfK240', 'NfPfKf', 'NfPfKfMN'))
-  ii<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfK1")
-  ij<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfKf")
-  ik<-which(DATA[,"Location"]=="Benue" & DATA[,"Year"]=="2017" & DATA[,"Treatment"]=="NfPfKfMn")
-  DAP_vs_IPAR(Series1=DATA[ii,],Series2=DATA[ij,],Series3=DATA[ik,],
-              LOCYR="Benue, 2017",
+			  
+  i <- which(DATA$Location=="Benue" & DATA$Year=="2017" & DATA$Treatment=="NfPfK1")
+  j <- which(DATA$Location=="Benue" & DATA$Year=="2017" & DATA$Treatment=="NfPfKf")
+  k <- which(DATA$Location=="Benue" & DATA$Year=="2017" & DATA$Treatment=="NfPfKfMn")
+  DAP_vs_IPAR(Series1=DATA[i,], Series2=DATA[j,], Series3=DATA[k,], LOCYR="Benue, 2017",
               LEG=FALSE,LEGTEXT=c('NfPfK240', 'NfPfKf', 'NfPfKfMN'))
-  mtext("Days after planting", side = 1, line = 1, outer = TRUE, at = NA,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
-  
-  mtext("IPAR, f", 
-        side = 2, line = 1, outer = TRUE, at = 0.25,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
-  mtext("IPAR, f", 
-        side = 2, line = 1, outer = TRUE, at = 0.75,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
+			  
+  mtext("Days after planting", side = 1, line = 1, outer = TRUE)
+  mtext("IPAR, f", side = 2, line = 1, outer = TRUE, at = 0.25)
+  mtext("IPAR, f", side = 2, line = 1, outer = TRUE, at = 0.75)
 }
 
-  Figure2(DATA)  
+Figure2(DATA)  
 ```
 
 
-## Figure 3
+### Figure 3
 
 ```{r fig3}
 #Data on cumulative intercepted PAR, combining measure wheater data and interpolated measurements of LI from AccurPAR data
 Bio_cumIPAR <- read.csv(file.path(lcp, "ex/Bio_cumIPAR_NFPFKF_BenueEdo.csv"))
 
-#Figure 3.
-Adiele_etal_EJA_Fig_3 <- function(Bio_cumIPAR){
+Fig_3 <- function(Bio_cumIPAR){
   
+  par(oma=c(2,2,2,2),mar=c(5,5,0,0))
   Bio_cumIPAR$Loc_yr <- factor(Bio_cumIPAR$Loc_yr)
   #par(mfrow=c(1,2))
-  ii<-which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2016" )
-  plot(Bio_cumIPAR[ii,"Cum_PAR.MJm.2"], Bio_cumIPAR[ii,"BiomassDM.gm.2"], xlab = "Cumulative IPAR (MJ/m²)", ylab = "Biomass (g/m²)",
+  i <- which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2016" )
+  plot(Bio_cumIPAR[i,"Cum_PAR.MJm.2"], Bio_cumIPAR[i,"BiomassDM.gm.2"], 
+       xlab = "Cumulative IPAR (MJ/m²)", ylab = "Biomass (g/m²)",
        cex.lab=1.3, cex = 1.0, pch =1, xlim = c(0,2600), ylim = c(0,9000))
-  ii<-which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2017" )
-  points(Bio_cumIPAR[ii,"Cum_PAR.MJm.2"], Bio_cumIPAR[ii,"BiomassDM.gm.2"], pch =16, cex = 1.0)
+  i <- which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2017" )
+  points(Bio_cumIPAR[i,"Cum_PAR.MJm.2"], Bio_cumIPAR[i,"BiomassDM.gm.2"], pch=16)
   
-  ii<-which(Bio_cumIPAR[,"Loc_yr"]=="Benue_2016" )
-  points(Bio_cumIPAR[ii,"Cum_PAR.MJm.2"], Bio_cumIPAR[ii,"BiomassDM.gm.2"], pch =2, cex = 1.0)
-  ii<-which(Bio_cumIPAR[,"Loc_yr"]=="Benue_2016" )
-  points(Bio_cumIPAR[ii,"Cum_PAR.MJm.2"], Bio_cumIPAR[ii,"BiomassDM.gm.2"], pch =17, cex = 1.0)
+  i <- which(Bio_cumIPAR[,"Loc_yr"]=="Benue_2016" )
+  points(Bio_cumIPAR[i,"Cum_PAR.MJm.2"], Bio_cumIPAR[i,"BiomassDM.gm.2"], pch =2)
+  i <- which(Bio_cumIPAR[,"Loc_yr"]=="Benue_2016" )
+  points(Bio_cumIPAR[i,"Cum_PAR.MJm.2"], Bio_cumIPAR[i,"BiomassDM.gm.2"], pch=17)
   legend('bottomright', c('Edo, 2016', 'Edo, 2017', 'Benue, 2016', 'Benue, 2017'), 
          pch = c(1,16,2,17), bty = 'n')
   
   #c(20,15,1,0)
-  ii<-which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2016" )
-  ModBE <- lm(BiomassDM.gm.2 ~ -1 + Cum_PAR.MJm.2,Bio_cumIPAR[ii,])
+  i <- which(Bio_cumIPAR[,"Loc_yr"]=="Edo_2016" )
+  ModBE <- lm(BiomassDM.gm.2 ~ -1 + Cum_PAR.MJm.2,Bio_cumIPAR[i,])
   summary(ModBE)
   anova(ModBE)
   abline(ModBE)
   legend('topleft', c('Edo 2016', 'R² = 0.98, P< .001', 'y = 2.76x'), bty = 'n')
 }
 
-par(oma=c(2,2,2,2),mar=c(5,5,0,0))
-Adiele_etal_EJA_Fig_3(Bio_cumIPAR=Bio_cumIPAR)
+Fig_3(Bio_cumIPAR=Bio_cumIPAR)
 
 ```
 
 
-## Figure 4
+### Figure 4
 
 ```{r fig4}
 #Data output from LINTUL-cASSAVA simulations
 #Analysing Simulated and observed yield 
 #Read in the data needed
 #plant parts g DM/m2
-BIOMASS    <- read.csv(file.path(lcp, 'ex/Biomass_NPKuptake_plantpart_totals_per_treatment.csv'))
+BIOMASS   <- read.csv(file.path(lcp, 'ex/Biomass_NPKuptake_plantpart_totals_per_treatment.csv'))
 BIOM_Edo16 <- BIOMASS[which(BIOMASS$Location == 'Edo' & BIOMASS$Year == 2016 & BIOMASS$Treatment == "NfPfKf"),]
 BIOM_Edo17 <- BIOMASS[which(BIOMASS$Location == 'Edo' & BIOMASS$Year == 2017 & BIOMASS$Treatment == "NfPfKf"),]
 BIOM_BEN16 <- BIOMASS[which(BIOMASS$Location == 'Benue' & BIOMASS$Year == 2016 & BIOMASS$Treatment == "NfPfKf"),]
@@ -337,40 +281,25 @@ BIOM_BEN17 <- BIOMASS[which(BIOMASS$Location == 'Benue' & BIOMASS$Year == 2017 &
 BIOM_CRS16 <- BIOMASS[which(BIOMASS$Location == 'CRS' & BIOMASS$Year == 2016 & BIOMASS$Treatment == "NfPfKf"),]
 BIOM_CRS17 <- BIOMASS[which(BIOMASS$Location == 'CRS' & BIOMASS$Year == 2017 & BIOMASS$Treatment == "NfPfKf"),]
 
-LeavesStemRootDynamics<-function(Series1=Potential,
-                                 Series2=NULL,
-                                 BIOMASS=NA,TITLE=title,
-                                 LEG=TRUE,LEGTEXT=c('Potential', 'Water lim.', 'Nutrient lim.', "Observed")){
+LeavesStemRootDynamics <- function(Series1=Potential, Series2=NULL,
+                    BIOMASS=NA, TITLE, LEG=FALSE, 
+                    LEGTEXT=c('Potential', 'Water lim.', "Observed")){
   
   # leaves
   
-  ColS1 <- rgb(red = 0, green = 0, blue = 0, alpha = 1) #black line
-  ColS2 <- rgb(red = 1, green = 0, blue = 0, alpha = 0.8)#red line
-  colBIOM <- "black" #'#22BB22'
-  
-  plot( x    = Series1$time, 
-        y    = Series1$WLVG, type="l", 
-        col  = ColS1, 
-        xlab = "time (days)", 
-        ylab = expression('Green leaves, g DM m'^-2),
-        ylim = c(0,500), 
-        lwd  = 2,
-        lty  = 1,
-        cex.lab  = 1.25, #1.0
-        cex.axis= 1.1, #0.85
-        mgp=c(2,0.5,0))
+  red <- rgb(1, 0, 0, alpha = 0.8)
+
+  plot(Series1$time, Series1$WLVG, type="l", xlab = "time (days)",
+       ylab = expression('Green leaves, g DM m'^-2), ylim = c(0,500),
+       lwd = 2, lty = 1, cex.lab  = 1.25, cex.axis= 1.1, mgp=c(2,0.5,0))
   text(x=median(Series1$time), y=490,labels=TITLE,cex=1.5)
-  colLEG <- ColS1
+  colLEG <- "black"
   colLWD <- 2
   colLTY <- 1
   colPCH <- NA
-  if(length(Series2)>1){
-    lines(x    = Series2$time, 
-          y    = Series2$WLVG, 
-          col  = ColS2, 
-          lwd  = 2,
-          lty  = 2)
-    colLEG <- c(colLEG,ColS2)
+  if(length(Series2) > 1){
+    lines(Series2$time, Series2$WLVG, col = red, lwd = 2, lty = 2)
+    colLEG <- c(colLEG, red)
     colLWD <- c(colLWD, 2)
     colLTY <- c(colLTY, 2)
     colPCH <- c(colPCH, NA)
@@ -379,12 +308,8 @@ LeavesStemRootDynamics<-function(Series1=Potential,
     arrows(BIOMASS$time, BIOMASS$DMLeaves.g.DM.m2-BIOMASS$std_DMLeaves.g.DM.m2, 
            BIOMASS$time, BIOMASS$DMLeaves.g.DM.m2+BIOMASS$std_DMLeaves.g.DM.m2, 
            length=0.05, angle=90, code=3)
-    points(x   = BIOMASS$time,
-           y   = BIOMASS$DMLeaves.g.DM.m2,
-           col = colBIOM,
-           lwd = 2.5,
-           pch = 19)
-    colLEG <- c(colLEG,colBIOM)
+    points(BIOMASS$time, BIOMASS$DMLeaves.g.DM.m2, lwd = 2.5, pch = 19)
+    colLEG <- c(colLEG, "black")
     colLWD <- c(colLWD, 2.5)
     colLTY <- c(colLTY, NA)
     colPCH <- c(colPCH, 19)
@@ -395,111 +320,60 @@ LeavesStemRootDynamics<-function(Series1=Potential,
   #STEMS
   
   #par(mfrow=c(1,1), oma = c(4,1,1,1), mar = c(0.6,5,0,0))
-  plot( x    = Series1$time, 
-        y    = Series1$WST, type="l", 
-        col  = ColS1, 
-        xlab = "time (days)", 
-        ylab = expression('Stems, g DM m'^-2),
-        ylim = c(0,2000), 
-        lwd  = 2,
-        lty  = 1,
-        cex.lab  = 1.25, #1.0
-        cex.axis= 1.1, #0.85
-        mgp=c(2,0.5,0))
+  plot(Series1$time, Series1$WST, type="l", xlab = "time (days)", 
+        ylab = expression('Stems, g DM m'^-2), ylim = c(0,2000), 
+        lwd = 2, cex.lab  = 1.25, cex.axis= 1.1, mgp=c(2,0.5,0))
   
   if(length(Series2)>1){
-    lines(x    = Series2$time, 
-          y    = Series2$WST, 
-          col  = ColS2, 
-          lwd  = 2,
-          lty  = 2)
+    lines(Series2$time, Series2$WST, col=red, lwd=2, lty=2)
   }
-if(length(BIOMASS)>1){
+  if(length(BIOMASS)>1){
     arrows(BIOMASS$time, BIOMASS$DMstems.g.DM.m2-BIOMASS$std_DMstems.g.DM.m2, 
            BIOMASS$time, BIOMASS$DMstems.g.DM.m2+BIOMASS$std_DMstems.g.DM.m2, 
            length=0.05, angle=90, code=3)
-    points(x   = BIOMASS$time,
-           y   = BIOMASS$DMstems.g.DM.m2,
-           col = colBIOM,
-           lwd = 2.5,
-           pch = 19)
+    points(x = BIOMASS$time, y = BIOMASS$DMstems.g.DM.m2, lwd = 2.5, pch = 19)
   }
   if(LEG){
-    leg_x <- 150   # higher is more to right
-    leg_y <- 1100  # higher is more to upper
-    legend("topleft", legend=LEGTEXT, col = colLEG, lwd = colLWD, lty = colLTY, pch = colPCH, bty = "n")
+    legend("topleft", legend=LEGTEXT, col = colLEG, lwd = colLWD, 
+           lty = colLTY, pch = colPCH, bty = "n")
   }
   
   ###################################################################
   
   #Storage roots
   
-  plot( x    = Series1$time, 
-        y    = Series1$WSO, type="l", 
-        col  = ColS1, 
-        xlab = "time (days)", 
-        ylab = expression('Storage roots, g DM m'^-2),
-        ylim = c(0,4000), 
-        lwd  = 2,
-        lty  = 1,
-        cex.lab  = 1.25, #1.0
-        cex.axis= 1.1, #0.85
-        mgp=c(2,0.5,0))
+  plot(Series1$time, Series1$WSO, type="l", xlab = "time (days)",
+       ylab = expression('Storage roots, g DM m'^-2), ylim = c(0,4000), 
+       lwd = 2, cex.lab  = 1.25, cex.axis= 1.1, mgp=c(2,0.5,0))
   if(length(Series2)>1){
-    lines(x    = Series2$time, 
-          y    = Series2$WSO, 
-          col  = ColS2, 
-          lwd  = 2,
-          lty  = 2)
+    lines(Series2$time, Series2$WSO, col = red, lwd = 2, lty = 2)
   }
   if(length(BIOMASS)>1){
     arrows(BIOMASS$time, BIOMASS$DMRoots.g.DM.m2 - BIOMASS$std_DMRoots.g.DM.m2, 
            BIOMASS$time, BIOMASS$DMRoots.g.DM.m2 + BIOMASS$std_DMRoots.g.DM.m2, 
            length=0.05, angle=90, code=3)
-    points(x   = BIOMASS$time,
-           y   = BIOMASS$DMRoots.g.DM.m2,
-           col = colBIOM,
-           lwd = 2.5,
-           pch = 19)
+    points(BIOMASS$time, BIOMASS$DMRoots.g.DM.m2, lwd = 2.5, pch = 19)
   }
 }
 
 
 Figure4 <- function(){
   par(mfcol=c(3,5),oma=c(3,3,1,1),mar=c(1.5,1.5,0,0))
-  LeavesStemRootDynamics(Series1=mod$Pot_Edo17,
-                         Series2=mod$Wlim_Edo17,
-                         BIOMASS=BIOM_Edo17,TITLE="Edo '17",
-                         LEG=TRUE,LEGTEXT=c('Potential', 'Water limited',"Observed"))
-  LeavesStemRootDynamics(Series1=mod$Pot_CRS16,
-                         Series2=mod$Wlim_CRS16,
-                         BIOMASS=BIOM_CRS16,TITLE="CRS '16",
-                         LEG=FALSE,LEGTEXT=c('Potential', 'Water lim.',"Observed"))
-  LeavesStemRootDynamics(Series1=mod$Pot_CRS17,
-                         Series2=mod$Wlim_CRS17,
-                         BIOMASS=BIOM_CRS17,TITLE="CRS '17",
-                         LEG=FALSE,LEGTEXT=c('Potential', 'Water lim.',"Observed"))
-  LeavesStemRootDynamics(Series1=mod$Pot_Ben16,
-                         Series2=mod$Wlim_Ben16,
-                         BIOMASS=BIOM_BEN16,TITLE="BEN '16",
-                         LEG=FALSE,LEGTEXT=c('Potential', 'Water lim.',"Observed"))
-  LeavesStemRootDynamics(Series1=mod$Pot_Ben17,
-                         Series2=mod$Wlim_Ben17,
-                         BIOMASS=BIOM_BEN17,TITLE="BEN '17",
-                         LEG=FALSE,LEGTEXT=c('Potential', 'Water lim.',"Observed"))
+  LeavesStemRootDynamics(Series1=mod$Pot_Edo17, Series2=mod$Wlim_Edo17,
+                         BIOMASS=BIOM_Edo17, TITLE="Edo '17", LEG=TRUE)
+  LeavesStemRootDynamics(Series1=mod$Pot_CRS16,Series2=mod$Wlim_CRS16,
+                         BIOMASS=BIOM_CRS16,TITLE="CRS '16")
+  LeavesStemRootDynamics(Series1=mod$Pot_CRS17, Series2=mod$Wlim_CRS17,
+                         BIOMASS=BIOM_CRS17, TITLE="CRS '17")
+  LeavesStemRootDynamics(Series1=mod$Pot_Ben16, Series2=mod$Wlim_Ben16,
+                         BIOMASS=BIOM_BEN16, TITLE="BEN '16")
+  LeavesStemRootDynamics(Series1=mod$Pot_Ben17, Series2=mod$Wlim_Ben17,
+                         BIOMASS=BIOM_BEN17, TITLE="BEN '17")
   
-  mtext("Days after planting", side = 1, line = 1, outer = TRUE, at = NA,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
-  
-  mtext("Roots, gDM/m2", 
-        side = 2, line = 1, outer = TRUE, at = 0.2,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
-  mtext("Stems, gDM/m2", 
-        side = 2, line = 1, outer = TRUE, at = 0.52,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
-  mtext("Leaves, gDM/m2 ", 
-        side = 2, line = 1, outer = TRUE, at = 0.86,
-        adj = NA, padj = NA, cex = 1, col = "black", font = NA)
+  mtext("Days after planting", side = 1, line = 1, outer = TRUE, at = NA)
+  mtext("Roots, gDM/m2", side = 2, line = 1, outer = TRUE, at = 0.2)
+  mtext("Stems, gDM/m2", side = 2, line = 1, outer = TRUE, at = 0.52)
+  mtext("Leaves, gDM/m2 ", side = 2, line = 1, outer = TRUE, at = 0.86)
 }
 
 Figure4()
@@ -507,68 +381,55 @@ Figure4()
 
 
 
-## Figure 5
+### Figure 5
 
 Plotting simulated versus observed storage root yield NfPfKf for all years in Benue, Cross River and Edo  (Fig. 5 in thesis chapter 3)
 
 ```{r fig5}
 #Get the data
-MEASURED_DATA <- read.csv(file.path(lcp, "ex/Biomass_NPKuptake_plantpart_totals_per_treatment.csv"))
+measured <- read.csv(file.path(lcp, "ex/Biomass_NPKuptake_plantpart_totals_per_treatment.csv"))
 
-MEASURED_DATA <- subset(MEASURED_DATA,Treatment == "NfPfKf", select=c("Year","Location","time","DMRoots.g.DM.m2"))
-MEASURED_DATA[,"DMRoots.t.ha"]<-MEASURED_DATA[,"DMRoots.g.DM.m2"]*1E4*1E-6
+measured <- measured[measured$Treatment == "NfPfKf", c("Year","Location","time","DMRoots.g.DM.m2")]
+measured[,"DMRoots.t.ha"] <- measured[,"DMRoots.g.DM.m2"] * 0.01 #1E4*1E-6
 
-MODELLED <- do.call(rbind, mod)[, c("Location", "Year", "time","WSOTHA")]
+modelled <- do.call(rbind, mod)[, c("Location", "Year", "time","WSOTHA")]
 
-COMBINED_DATA=NULL
-for(year in 2016:2017){
-  for(loc in c("Edo","Benue","CRS")){
-    ii<-which(MEASURED_DATA[,"Location"] == loc & MEASURED_DATA[,"Year"] == year)
-    jj<-which(MODELLED[,"Location"] == loc & MODELLED[,"Year"] == year)
-    
-    combdata<-merge(MEASURED_DATA[ii,], MODELLED[jj,],by="time", suffixes=c(".measured",".modelled"))
-    COMBINED_DATA = rbind(COMBINED_DATA, combdata)
-  }
-}
+dcomb <- merge(measured, modelled, by=c("time", "Year", "Location"))
 
-
-fit <- lm(WSOTHA ~ -1 + DMRoots.t.ha, COMBINED_DATA)
+fit <- lm(WSOTHA ~ -1 + DMRoots.t.ha, data=dcomb)
 sfit = summary(fit)
 RMSE=sqrt(mean(sfit$residuals^2))
 anova(fit)
-print(paste0("Fitted linear regression. Slope =", sfit$coefficients[1], ", R2= ",sfit$r.squared ,", RMSE =", RMSE))
+print(paste0("Fitted linear regression. Slope =", sfit$coefficients[1], ", 
+             R2= ", sfit$r.squared ,", RMSE =", RMSE))
 
-Figure_5 <- function(COMBINED_DATA){
-  ii<-which(COMBINED_DATA[,"Year.measured"]==2017 & COMBINED_DATA[,"Location.measured"]=="Benue")
-  plot(x=COMBINED_DATA[ii,"DMRoots.t.ha"],y=COMBINED_DATA[ii,"WSOTHA"],
-       xlim = c(0,40), ylim = c(0,40),
-       cex.lab=1.5, cex = 1.5,
+
+Figure_5 <- function(d){
+  i <- which(d$Year==2017 & d$Location=="Benue")
+  plot(x=d[i,"DMRoots.t.ha"],y=d[i,"WSOTHA"],
+       xlim = c(0,40), ylim = c(0,40), cex.lab=1.5, cex = 1.5,
        xlab = 'Observed storage roots (t DM/ha)',
-       ylab = 'Simulated storage roots (t DM/ha)',
-       type="p",
-       pch=15,col="black")
-  ii<-which(COMBINED_DATA[,"Year.measured"]==2016 & COMBINED_DATA[,"Location.measured"]=="Benue")
-  points( x=COMBINED_DATA[ii,"DMRoots.t.ha"],y=COMBINED_DATA[ii,"WSOTHA"], pch=0,col="black",cex=1.5)
-  ii<-which(COMBINED_DATA[,"Year.measured"]==2017 & COMBINED_DATA[,"Location.measured"]=="Edo")
-  points( x=COMBINED_DATA[ii,"DMRoots.t.ha"],y=COMBINED_DATA[ii,"WSOTHA"], pch=16,col="black",cex=1.5)
-  ii<-which(COMBINED_DATA[,"Year.measured"]==2016 & COMBINED_DATA[,"Location.measured"]=="CRS")
-  points( x=COMBINED_DATA[ii,"DMRoots.t.ha"],y=COMBINED_DATA[ii,"WSOTHA"], pch=2,col="black",cex=1.5)
-  ii<-which(COMBINED_DATA[,"Year.measured"]==2017 & COMBINED_DATA[,"Location.measured"]=="CRS")
-  points( x=COMBINED_DATA[ii,"DMRoots.t.ha"],y=COMBINED_DATA[ii,"WSOTHA"], pch=17,col="black",cex=1.5)
-  lines(c(-100,100),c(-100,100),col="black",lty=1,lwd=2)
-  lines(c(-100,100),c(-100,100)*sfit$coefficients[1],col="red",lty=3,lwd=3)
+       ylab = 'Simulated storage roots (t DM/ha)', pch=15)
+  i <- which(d$Year==2016 & d$Location=="Benue")
+  points(d[i,"DMRoots.t.ha"], d[i,"WSOTHA"], pch=0, cex=1.5)
+  i <- which(d$Year==2017 & d$Location=="Edo")
+  points(d[i,"DMRoots.t.ha"], d[i,"WSOTHA"], pch=16,cex=1.5)
+  i <- which(d$Year==2016 & d$Location=="CRS")
+  points(d[i,"DMRoots.t.ha"], d[i,"WSOTHA"], pch=2, cex=1.5)
+  i <- which(d$Year==2017 & d$Location=="CRS")
+  points(d[i,"DMRoots.t.ha"], d[i,"WSOTHA"], pch=17, cex=1.5)
+  lines(c(-100,100), c(-100,100), lwd=2)
+  lines(c(-100,100), c(-100,100)*sfit$coefficients[1], col="red",lty=3,lwd=3)
   
   legend("bottomright", c("Edo, 2017", "CRS, 2016", "CRS, 2017", "Benue, 2016" ,"Benue, 2017"),
-         cex=1.2,
-         pch = c(16, 2,17,0,15), bty="n") 
+         cex=1.2, pch = c(16, 2,17,0,15), bty="n") 
   #text(x=10,y=35,labels=paste0("slope = ",round(sfit$coefficients[1],2),", RMSE=",round(RMSE,2),", R²=",round(sfit$r.squared,2)))
-  legend('topleft', c( paste0('y = ',round(sfit$coefficients[1],2),'x'),
+  legend('topleft', c( paste0('y = ', round(sfit$coefficients[1],2),'x'),
                        paste0('R² = ', round(sfit$r.squared,2)),
-                       paste0('RMSE = ',round(RMSE,2))), 
-         cex=1.2, bty = 'n')
+                       paste0('RMSE = ',round(RMSE,2))), cex=1.2, bty='n')
 }
 
-Figure_5(COMBINED_DATA)
+Figure_5(dcomb)
 
 ```
 
